--- a/.cargo/config
+++ b/.cargo/config
@@ -1,5 +1,5 @@
 [build]
-target = "x86_64-blog_os.json"
+target = "x86_64-nick_os.json"
 
 [target.'cfg(target_os = "none")']
 runner = "bootimage runner"
