--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,45 @@ version = "0.1.0"
 authors = ["Marcelo Castellani <marcelo@linux.com>"]
 edition = "2018"
 
+[[test]]
+name = "should_panic"
+harness = false
+
+[[test]]
+name = "stack_overflow"
+harness = false
+
 [dependencies]
-bootloader = "0.9.3"
+bootloader = { version = "0.9.3", features = ["map_physical_memory"]}
 volatile = "0.2.6"
 spin = "0.5.2"
+x86_64 = "0.11.0"
+uart_16550 = "0.2.0"
+pic8259_simple = "0.2.0"
+pc-keyboard = "0.5.0"
+linked_list_allocator = "0.8.0"
 
 [dependencies.lazy_static]
 version = "1.0"
 features = ["spin_no_std"]
+
+[dependencies.crossbeam-queue]
+version = "0.2.1"
+default-features = false
+features = ["alloc"]
+
+[dependencies.conquer-once]
+version = "0.2.0"
+default-features = false
+
+[dependencies.futures-util]
+version = "0.3.4"
+default-features = false
+features = ["alloc"]
+
+[package.metadata.bootimage]
+test-args = [
+    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
+    "-display", "none"
+]
+test-success-exit-code = 33
